# dotscoin-core

./: .gitignore  Address.py  Block.py  BlockChain.py  Election.py  Mempool.py  Node.py  README.md  SUMMARY.md  Transaction.py  addblock.py  addtransaction.py  bottle.py  client.py  electionfund.json  genaddress.py  generategenblock.py  genesisaddress.json  genesisblock.json  install.sh  main.py  miniserver.py  nodecreate.py  recvfiletest.py  requirements.txt  rpc-commands.md  rpc.py  sendfiletest.py  server.py  settings.py  testTransaction.py  testblock.py  testclient.py  testenc.py  this_node_data.json  transaction-format.md  udp-commands.md  utils.py  wordgen.py  wsgiserver.py
dotscoin/: Address.py  Block.py  BlockChain.py  Consensus.py  Election.py  FileHandler.py  Mempool.py  Mining.py  Node.py  RPC.py  Rpc.py  StorageTx.py  TimeServer.py  Transaction.py  TransactionInput.py  TransactionOutput.py  UDP.py  UDPHandler.py  Verification.py  Vote.py
native/: CMakeLists.txt  native.cpp  native.h
scripts/: debian9.sh  ubuntu.sh
tests/: addtransaction.py  checkelectionfund.py  checkredis.py  filesplit.py  recvfile.cpp  recvfiletest.py  sendfile.cpp  sendfiletest.py  sendtransaction.py  testreceiver.py  udpTest.py
tests/unit/: test_address.py  test_block.py  test_blockchain.py  test_mempool.py  test_transaction.py  test_udp.py
tests/zmqtest/: f2.py
threads/: Election.py  broadcast.py  broadcast_receiver.py  broadcaster.py  election.py  receiver.py  rpc.py  storage.py
zmqtest/: f1.py
